# possum-wm

./: .cirrus.yml  .gitignore  .pylintrc  .spelling  LICENSE.txt  README.md  bors.toml  pyproject.toml  setup.cfg
.github/: FUNDING.yml
possum/: __init__.py
possum_wm/: cli.py  wm.py
