[metadata]
name = possum-wm
version = attr: possum_wm.__version__
author = attr: possum_wm.__author__
author_email = me@duckie.co
description = a keyboard-driven window manager for palmtop PCs
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/possum
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.6

install_requires =
    python-xlib
#    toml~=0.10.0
#    click~=7.0
#    coloredlogs~=10.0

tests_require =
    possum_wm[linting,testing]

[options.extras_require]
linting =
    flake8==3.7.9
    flake8-bugbear==19.8.0
    flake8-commas==2.0.0
    flake8-docstrings==1.5.0
    flake8-import-order==0.18.1
    pep8-naming==0.9.1
    pylint==2.4.4

testing =
    pytest==5.3.1
    pytest-flake8==1.0.4
    pytest-pylint==0.14.1

[options.entry_points]
console_scripts =
    possum-wm = possum_wm.cli:main

[flake8]
select = C,E,F,I,N,W,B,B9
max-line-length = 85
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    venv

import-order-style = google
